# softdrink

./: README.md
.github/workflows/: rah_makerelease.yml
softdrink_code/: Makefile.am  configure.ac  rah_execautomake.sh
softdrink_code/assets/: application-x-jump_others.xml  application-x-jump_ubuntu.xml  make_jumpfile.sh  softdrink.desktop
softdrink_code/src/: Makefile.am  VERSION  appstrings.h  softdrink.c  trimstr.h
